[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Levels/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Instances/Actors/UI/ChatUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Instances/Actors/UI/AccountUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Instances/Actors/UI/PauseScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Instances/Particles/OpeningEyeCandy.tscn" type="PackedScene" id=7]
[ext_resource path="res://mijoldlogo.png" type="Texture" id=8]
[ext_resource path="res://Sprites/PNGs/godot_logo_large_monochrome_dark.png" type="Texture" id=9]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Tweens" type="Node" parent="."]

[node name="OpeningTween" type="Tween" parent="Tweens"]

[node name="OpeningEyeCandy" parent="." instance=ExtResource( 7 )]
position = Vector2( 646, 338 )

[node name="MainUI" type="CanvasLayer" parent="."]
layer = 128

[node name="FirstLoad" type="Control" parent="MainUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/FirstLoad"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = -355.0
margin_right = 219.0
margin_bottom = 353.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 232.0
margin_right = 440.0
margin_bottom = 252.4
text = "Startup Settings"
align = 1

[node name="Check_Debug" type="CheckButton" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 256.0
margin_right = 440.0
margin_bottom = 288.0
text = "DEBUG mode"

[node name="Check_fov" type="CheckButton" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 291.0
margin_right = 440.0
margin_bottom = 323.0
text = "FOV/shadows"

[node name="Check_tracker" type="CheckButton" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 326.0
margin_right = 440.0
margin_bottom = 358.0
pressed = true
text = "FPS Tracker"

[node name="Label2" type="Label" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 360.0
margin_right = 440.0
margin_bottom = 380.4
text = "Networking"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 384.0
margin_right = 440.0
margin_bottom = 408.0
alignment = 1

[node name="Label2" type="Label" parent="MainUI/FirstLoad/VBoxContainer/HBoxContainer2"]
margin_left = 125.0
margin_top = 1.0
margin_right = 152.4
margin_bottom = 21.4
text = "IP :"

[node name="IP_Text" type="LineEdit" parent="MainUI/FirstLoad/VBoxContainer/HBoxContainer2"]
margin_left = 155.0
margin_right = 315.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
align = 1
placeholder_text = "For online servers"
placeholder_alpha = 0.2

[node name="Label3" type="Label" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 410.0
margin_right = 440.0
margin_bottom = 430.4
text = "Connection To"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/FirstLoad/VBoxContainer"]
margin_top = 434.0
margin_right = 440.0
margin_bottom = 474.0
alignment = 1

[node name="Connect_LAN" type="Button" parent="MainUI/FirstLoad/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 218.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "LAN"

[node name="Connect_CustomIp" type="Button" parent="MainUI/FirstLoad/VBoxContainer/HBoxContainer"]
margin_left = 221.0
margin_right = 341.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Online"

[node name="Chat" parent="MainUI" instance=ExtResource( 4 )]
visible = false
margin_left = 1282.21
margin_right = 402.206

[node name="AccountUI" parent="MainUI" instance=ExtResource( 5 )]
visible = false

[node name="MainMenu" parent="MainUI" instance=ExtResource( 3 )]

[node name="PauseScreen" parent="MainUI" instance=ExtResource( 6 )]
visible = false

[node name="OpeningScreen" type="Control" parent="MainUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MainUI/OpeningScreen"]
margin_top = 244.0
margin_right = 1281.0
margin_bottom = 433.0
bbcode_enabled = true
bbcode_text = "
[center]Welcome to The Wizards Chronicles Remake Pre-Alpha!


TWCRemake is an open source recreation of the Harry Potter fan-game, Harry Potter: The Wizards' Chronicles. It is not meant to be a port or a remaster of the original BYOND version of the game as this remake adds in several improvements, changes and content to the game.

This game is entirely multiplayer and requires a server to be able to play it online or through LAN, keep in mind that server owners are responsible for what is allowed or what happens on their servers and that the project's developer has no control over what happens on private or community servers.

Please consider supporting the game's development through contributions or by donating to the game's lead developer on patreon.

"
text = "
Welcome to The Wizards Chronicles Remake Pre-Alpha!


TWCRemake is an open source recreation of the Harry Potter fan-game, Harry Potter: The Wizards' Chronicles. It is not meant to be a port or a remaster of the original BYOND version of the game as this remake adds in several improvements, changes and content to the game.

This game is entirely multiplayer and requires a server to be able to play it online or through LAN, keep in mind that server owners are responsible for what is allowed or what happens on their servers and that the project's developer has no control over what happens on private or community servers.

Please consider supporting the game's development through contributions or by donating to the game's lead developer on patreon.

"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotLogo" type="TextureRect" parent="MainUI/OpeningScreen"]
margin_left = 252.0
margin_top = 460.0
margin_right = 532.0
margin_bottom = 575.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotLogo2" type="TextureRect" parent="MainUI/OpeningScreen"]
margin_left = 699.74
margin_top = 434.361
margin_right = 1000.74
margin_bottom = 611.361
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainUI/OpeningScreen"]
margin_left = 935.0
margin_top = 694.0
margin_right = 1269.0
margin_bottom = 714.4
text = "Press Enter to continue.."
align = 1

[node name="World" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="button_down" from="MainUI/FirstLoad/VBoxContainer/HBoxContainer/Connect_LAN" to="." method="_on_Connect_LAN_button_down"]
